--- a/index.html
+++ b/index.html
@@ -2,10 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>title</title>
+    <title>Project</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <p id="demo"></p>
-    <button id="btn1">click me!</button>
+    <input id="input" type="text" />
+    <button id="myBtn">Click me</button>
+    <p id="message" style="color: red"></p>
+    <div class="wrapper">
+      <div class="title">
+        <h1>naor</h1>
+        <span>Hello</span>
+      </div>
+      <div class="text">
+        <span
+          >This text input only accept numbers and will not wotk with
+          letters</span
+        >
+      </div>
+    </div>
+    <script src="string-input.js"></script>
   </body>
 </html>
