--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p id="message" style="color: red"></p>
     <div class="wrapper">
       <div class="title">
-        <h1>naor</h1>
+        <h1>Project</h1>
         <span>Hello</span>
       </div>
       <div class="text">
